--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
  - oraclejdk8
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip -B -V
 cache:
   directories:
     - $HOME/.m2
